sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:11: error: reassignment to val
    currBase = (getTrouBase()+1)%nbBases;
             ^NaiveBaseball:12: error: reassignment to val
    posMaxBuggle = 0;
                 ^NaiveBaseball:13: error: reassignment to val
    maxDist = 0;
            ^NaiveBaseball:19: error: reassignment to val
        maxDist = getCouleurJoueur(i, j)-i;
                ^NaiveBaseball:20: error: reassignment to val
        posMaxBuggle = i;
                     ^